@@ -1,5 +1,7 @@
 package net.solostudio.vaultcher.database;
 
+import com.zaxxer.hikari.HikariConfig;
+import com.zaxxer.hikari.HikariDataSource;
 import lombok.Getter;
 import net.solostudio.vaultcher.Vaultcher;
 import net.solostudio.vaultcher.enums.keys.ConfigKeys;
@@ -11,39 +13,46 @@ import org.jetbrains.annotations.NotNull;
 
 import java.io.File;
 import java.security.SecureRandom;
-import java.sql.Connection;
-import java.sql.SQLException;
-import java.sql.DriverManager;
-import java.sql.ResultSet;
-import java.sql.PreparedStatement;
+import java.sql.*;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Getter
-public class SQLite extends AbstractDatabase {
+public class H2 extends AbstractDatabase {
     private final Connection connection;
+    private final HikariDataSource dataSource;
 
-    public SQLite() throws SQLException, ClassNotFoundException {
-        Class.forName("org.sqlite.JDBC");
-        File dataFolder = new File(Vaultcher.getInstance().getDataFolder(), "vaultcher.db");
-        String url = "jdbc:sqlite:" + dataFolder;
-        connection = DriverManager.getConnection(url);
+    public H2() throws SQLException, ClassNotFoundException {
+        Class.forName("net.solostudio.vaultcher.libs.h2.Driver");
+
+        HikariConfig config = new HikariConfig();
+
+        String url = "jdbc:h2:" + Vaultcher.getInstance().getDataFolder().getAbsolutePath() + "/database;MODE=MySQL";
+
+        config.setJdbcUrl(url);
+        config.setUsername("sa");
+        config.setPassword("");
+        config.setMaximumPoolSize(10);
+
+        dataSource = new HikariDataSource(config);
+        connection = dataSource.getConnection();
     }
 
     @Override
     public boolean isConnected() {
-        return connection != null;
+        return getConnection() != null;
     }
 
     @Override
     public void disconnect() {
         if (isConnected()) {
             try {
-                connection.close();
+                getConnection().close();
             } catch (SQLException exception) {
-                LoggerUtils.error("Error closing database connection: " + exception.getMessage());
+                LoggerUtils.error(exception.getMessage());
             }
         }
     }
@@ -53,24 +62,30 @@ public class SQLite extends AbstractDatabase {
         String vaultcherTableQuery = "CREATE TABLE IF NOT EXISTS vaultcher (VAULTCHER VARCHAR(255) NOT NULL, COMMAND VARCHAR(255) NOT NULL, USES INT, OWNERS VARCHAR(255), PRIMARY KEY (VAULTCHER))";
         String vaultcherPlayersTableQuery = "CREATE TABLE IF NOT EXISTS vaultcherplayers (NAME VARCHAR(255) NOT NULL, REFERRALCODE VARCHAR(7) NOT NULL, ACTIVATED BOOLEAN NOT NULL DEFAULT FALSE, ACTIVATORS INT NOT NULL DEFAULT 0, PRIMARY KEY (NAME))";
 
-        try (PreparedStatement vaultcherTableStatement = getConnection().prepareStatement(vaultcherTableQuery)) {
-            vaultcherTableStatement.execute();
-        } catch (SQLException exception) {
-            LoggerUtils.error(exception.getMessage());
-        }
-
-        try (PreparedStatement vaultcherPlayersTableStatement = getConnection().prepareStatement(vaultcherPlayersTableQuery)) {
-            vaultcherPlayersTableStatement.execute();
+        try (Statement statement = getConnection().createStatement()) {
+            statement.execute(vaultcherTableQuery);
+            statement.execute(vaultcherPlayersTableQuery);
         } catch (SQLException exception) {
             LoggerUtils.error(exception.getMessage());
         }
     }
 
     @Override
+    public void createPlayer(@NotNull String playerName) {
+        String query = "INSERT IGNORE INTO vaultcherplayers (NAME, REFERRALCODE, ACTIVATED, ACTIVATORS) VALUES (?, '', FALSE, 0)";
+
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
+            preparedStatement.setString(1, playerName);
+            preparedStatement.executeUpdate();
+        } catch (SQLException exception) {
+            LoggerUtils.error("Error creating player " + playerName + ": " + exception.getMessage());
+        }
+    }
+
+    @Override
     public void createReferralCode(@NotNull String name, @NotNull String referralCode) {
         String query = "UPDATE vaultcherplayers SET REFERRALCODE = ? WHERE NAME = ?";
-
-        try (PreparedStatement preparedStatement = connection.prepareStatement(query)) {
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
             preparedStatement.setString(1, referralCode);
             preparedStatement.setString(2, name);
             preparedStatement.executeUpdate();
@@ -82,11 +97,9 @@ public class SQLite extends AbstractDatabase {
     @Override
     public boolean doesPlayerExists(@NotNull String name) {
         String query = "SELECT 1 FROM vaultcherplayers WHERE NAME = ?";
-
-        try (PreparedStatement preparedStatement = connection.prepareStatement(query)) {
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
             preparedStatement.setString(1, name);
             ResultSet resultSet = preparedStatement.executeQuery();
-
             return resultSet.next();
         } catch (SQLException exception) {
             LoggerUtils.error("Error checking existence of player " + name + ": " + exception.getMessage());
@@ -113,8 +126,7 @@ public class SQLite extends AbstractDatabase {
     @Override
     public boolean doesReferralCodeExist(String code) {
         String query = "SELECT 1 FROM vaultcherplayers WHERE REFERRALCODE = ?";
-
-        try (PreparedStatement preparedStatement = connection.prepareStatement(query)) {
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
             preparedStatement.setString(1, code);
             ResultSet resultSet = preparedStatement.executeQuery();
             return resultSet.next();
@@ -127,10 +139,10 @@ public class SQLite extends AbstractDatabase {
     @Override
     public void activateReferral(@NotNull String name) {
         String selectQuery = "SELECT ACTIVATED FROM vaultcherplayers WHERE NAME = ?";
-        String updateQuery = "UPDATE vaultcherplayers SET ACTIVATED = 1 WHERE NAME = ?";
+        String updateQuery = "UPDATE vaultcherplayers SET ACTIVATED = TRUE WHERE NAME = ?";
 
-        try (PreparedStatement selectStatement = connection.prepareStatement(selectQuery);
-             PreparedStatement updateStatement = connection.prepareStatement(updateQuery)) {
+        try (PreparedStatement selectStatement = getConnection().prepareStatement(selectQuery);
+             PreparedStatement updateStatement = getConnection().prepareStatement(updateQuery)) {
 
             selectStatement.setString(1, name);
             ResultSet resultSet = selectStatement.executeQuery();
@@ -147,8 +159,7 @@ public class SQLite extends AbstractDatabase {
     @Override
     public void incrementActivators(@NotNull String referralCode) {
         String query = "UPDATE vaultcherplayers SET ACTIVATORS = ACTIVATORS + 1 WHERE REFERRALCODE = ?";
-
-        try (PreparedStatement preparedStatement = connection.prepareStatement(query)) {
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
             preparedStatement.setString(1, referralCode);
             preparedStatement.executeUpdate();
         } catch (SQLException exception) {
@@ -159,11 +170,9 @@ public class SQLite extends AbstractDatabase {
     @Override
     public int getActivators(@NotNull String referralCode) {
         String query = "SELECT ACTIVATORS FROM vaultcherplayers WHERE REFERRALCODE = ?";
-
-        try (PreparedStatement preparedStatement = connection.prepareStatement(query)) {
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
             preparedStatement.setString(1, referralCode);
             ResultSet resultSet = preparedStatement.executeQuery();
-
             if (resultSet.next()) return resultSet.getInt("ACTIVATORS");
         } catch (SQLException exception) {
             LoggerUtils.error(exception.getMessage());
@@ -174,11 +183,9 @@ public class SQLite extends AbstractDatabase {
     @Override
     public int getActivatorsFromPlayer(@NotNull String name) {
         String query = "SELECT ACTIVATORS FROM vaultcherplayers WHERE NAME = ?";
-
-        try (PreparedStatement preparedStatement = connection.prepareStatement(query)) {
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
             preparedStatement.setString(1, name);
             ResultSet resultSet = preparedStatement.executeQuery();
-
             if (resultSet.next()) return resultSet.getInt("ACTIVATORS");
         } catch (SQLException exception) {
             LoggerUtils.error(exception.getMessage());
@@ -189,12 +196,10 @@ public class SQLite extends AbstractDatabase {
     @Override
     public boolean isReferralActivated(@NotNull String name) {
         String query = "SELECT ACTIVATED FROM vaultcherplayers WHERE NAME = ?";
-
-        try (PreparedStatement preparedStatement = connection.prepareStatement(query)) {
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
             preparedStatement.setString(1, name);
             ResultSet resultSet = preparedStatement.executeQuery();
-
-            if (resultSet.next()) return resultSet.getInt("ACTIVATED") == 1;
+            if (resultSet.next()) return resultSet.getBoolean("ACTIVATED");
         } catch (SQLException exception) {
             LoggerUtils.error(exception.getMessage());
         }
@@ -204,11 +209,9 @@ public class SQLite extends AbstractDatabase {
     @Override
     public String getReferralCodeOwner(@NotNull String referralCode) {
         String query = "SELECT NAME FROM vaultcherplayers WHERE REFERRALCODE = ?";
-
-        try (PreparedStatement preparedStatement = connection.prepareStatement(query)) {
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
             preparedStatement.setString(1, referralCode);
             ResultSet resultSet = preparedStatement.executeQuery();
-
             if (resultSet.next()) return resultSet.getString("NAME");
         } catch (SQLException exception) {
             LoggerUtils.error(exception.getMessage());
@@ -219,11 +222,9 @@ public class SQLite extends AbstractDatabase {
     @Override
     public String getReferralCode(@NotNull String name) {
         String query = "SELECT REFERRALCODE FROM vaultcherplayers WHERE NAME = ?";
-
-        try (PreparedStatement preparedStatement = connection.prepareStatement(query)) {
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
             preparedStatement.setString(1, name);
             ResultSet resultSet = preparedStatement.executeQuery();
-
             if (resultSet.next()) return resultSet.getString("REFERRALCODE");
         } catch (SQLException exception) {
             LoggerUtils.error(exception.getMessage());
@@ -232,23 +233,8 @@ public class SQLite extends AbstractDatabase {
     }
 
     @Override
-    public void createPlayer(@NotNull String playerName) {
-        String query = "INSERT OR IGNORE INTO vaultcherplayers (NAME, REFERRALCODE, ACTIVATED, ACTIVATORS) VALUES (?, '', 0, 0)";
-
-        try {
-            try (PreparedStatement preparedStatement = connection.prepareStatement(query)) {
-                preparedStatement.setString(1, playerName);
-                preparedStatement.executeUpdate();
-            }
-        } catch (SQLException exception) {
-            LoggerUtils.error("Error creating player " + playerName + ": " + exception.getMessage());
-        }
-    }
-
-    @Override
     public void createVaultcher(@NotNull String name, @NotNull String cmd, int uses) {
-        String query = "INSERT OR IGNORE INTO vaultcher (VAULTCHER, COMMAND, USES) VALUES (?, ?, ?)";
-
+        String query = "INSERT IGNORE INTO vaultcher (VAULTCHER, COMMAND, USES) VALUES (?, ?, ?)";
         try {
             if (!exists(name)) {
                 try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
@@ -259,27 +245,21 @@ public class SQLite extends AbstractDatabase {
                 }
             }
         } catch (SQLException exception) {
-            LoggerUtils.error("Error creating vaultcher: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
     }
 
     @Override
     public boolean exists(@NotNull String name) {
         String query = "SELECT * FROM vaultcher WHERE VAULTCHER = ?";
-
         try {
-            if (!getConnection().isValid(2)) reconnect();
-
             try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
                 preparedStatement.setString(1, name);
-
-                return preparedStatement
-                        .executeQuery()
-                        .next();
+                ResultSet resultSet = preparedStatement.executeQuery();
+                return resultSet.next();
             }
         } catch (SQLException exception) {
-            LoggerUtils.error("Error checking if vaultcher exists: " + exception.getMessage());
-            return false;
+            throw new RuntimeException(exception);
         }
     }
 
@@ -288,7 +268,7 @@ public class SQLite extends AbstractDatabase {
         String selectQuery = "SELECT USES, COMMAND, OWNERS FROM vaultcher WHERE VAULTCHER = ?";
         String updateQuery = "UPDATE vaultcher SET USES = USES - 1 WHERE VAULTCHER = ?";
         String deleteQuery = "DELETE FROM vaultcher WHERE VAULTCHER = ?";
-        String updateOwnersQuery = "UPDATE vaultcher SET OWNERS = REPLACE(REPLACE(',' || OWNERS || ',', ', ' || ?, ', '), ', ', ', ') WHERE VAULTCHER = ?";
+        String updateOwnersQuery = "UPDATE vaultcher SET OWNERS = TRIM(BOTH ', ' FROM REPLACE(OWNERS, ?, '')) WHERE VAULTCHER = ?";
 
         try {
             int currentUses = 0;
@@ -296,7 +276,6 @@ public class SQLite extends AbstractDatabase {
 
             try (PreparedStatement selectStatement = getConnection().prepareStatement(selectQuery)) {
                 selectStatement.setString(1, name);
-
                 ResultSet resultSet = selectStatement.executeQuery();
                 if (resultSet.next()) {
                     currentUses = resultSet.getInt("USES");
@@ -326,128 +305,92 @@ public class SQLite extends AbstractDatabase {
                 }
             }
         } catch (SQLException exception) {
-            LoggerUtils.error("Error redeeming vaultcher: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
     }
 
     @Override
     public void giveVaultcher(@NotNull String vaultcher, @NotNull OfflinePlayer player) {
-        String updateOwnersQuery = "UPDATE vaultcher SET OWNERS = IFNULL(OWNERS || ', ', '') || ? WHERE VAULTCHER = ?";
-
-        try {
-            if (vaultcher.isEmpty() || Objects.requireNonNull(player.getName()).isEmpty()) {
-                LoggerUtils.error("Invalid player name or vaultcher provided.");
-                return;
-            }
-
-            try (PreparedStatement updateOwnersStatement = getConnection().prepareStatement(updateOwnersQuery)) {
-                updateOwnersStatement.setString(1, player.getName());
-                updateOwnersStatement.setString(2, vaultcher);
-                updateOwnersStatement.executeUpdate();
-            }
+        String updateOwnersQuery = "UPDATE vaultcher SET OWNERS = CONCAT(IFNULL(OWNERS, ''), ?, ', ') WHERE VAULTCHER = ?";
+        try (PreparedStatement updateOwnersStatement = getConnection().prepareStatement(updateOwnersQuery)) {
+            updateOwnersStatement.setString(1, player.getName());
+            updateOwnersStatement.setString(2, vaultcher);
+            updateOwnersStatement.executeUpdate();
         } catch (SQLException exception) {
-            LoggerUtils.error("Error giving vaultcher: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
     }
 
     @Override
     public boolean isOwned(@NotNull String vaultcher, @NotNull OfflinePlayer player) {
         String selectQuery = "SELECT OWNERS FROM vaultcher WHERE VAULTCHER = ?";
-
-        try {
-            try (PreparedStatement selectStatement = getConnection().prepareStatement(selectQuery)) {
-                selectStatement.setString(1, vaultcher);
-
-                ResultSet resultSet = selectStatement.executeQuery();
-
-                if (resultSet.next()) {
-                    String ownersList = resultSet.getString("OWNERS");
-                    return ownersList != null && ownersList.contains(Objects.requireNonNull(player.getName()));
-                }
+        try (PreparedStatement selectStatement = getConnection().prepareStatement(selectQuery)) {
+            selectStatement.setString(1, vaultcher);
+            ResultSet resultSet = selectStatement.executeQuery();
+            if (resultSet.next()) {
+                String ownersList = resultSet.getString("OWNERS");
+                return ownersList != null && ownersList.contains(Objects.requireNonNull(player.getName()));
             }
         } catch (SQLException exception) {
-            LoggerUtils.error("Error checking ownership: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
-
         return false;
     }
 
     @Override
     public boolean isUsesZero(@NotNull String vaultcher) {
         String query = "SELECT USES FROM vaultcher WHERE VAULTCHER = ?";
-
-        try {
-            try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
-                preparedStatement.setString(1, vaultcher);
-
-                ResultSet resultSet = preparedStatement.executeQuery();
-
-                if (resultSet.next()) {
-                    int uses = resultSet.getInt("USES");
-                    return uses == 0;
-                }
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
+            preparedStatement.setString(1, vaultcher);
+            ResultSet resultSet = preparedStatement.executeQuery();
+            if (resultSet.next()) {
+                int uses = resultSet.getInt("USES");
+                return uses == 0;
             }
         } catch (SQLException exception) {
-            LoggerUtils.error("Error checking uses: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
-
         return false;
     }
 
     @Override
     public int getUses(@NotNull String vaultcher) {
         String query = "SELECT USES FROM vaultcher WHERE VAULTCHER = ?";
-
-        try {
-            try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
-                preparedStatement.setString(1, vaultcher);
-
-                ResultSet resultSet = preparedStatement.executeQuery();
-
-                if (resultSet.next()) return resultSet.getInt("USES");
-            }
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
+            preparedStatement.setString(1, vaultcher);
+            ResultSet resultSet = preparedStatement.executeQuery();
+            if (resultSet.next()) return resultSet.getInt("USES");
         } catch (SQLException exception) {
-            LoggerUtils.error("Error getting uses: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
-
         return 0;
     }
 
     @Override
     public String getCommand(@NotNull String vaultcher) {
         String query = "SELECT COMMAND FROM vaultcher WHERE VAULTCHER = ?";
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
+            preparedStatement.setString(1, vaultcher);
+            ResultSet resultSet = preparedStatement.executeQuery();
 
-        try {
-            try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
-                preparedStatement.setString(1, vaultcher);
-
-                ResultSet resultSet = preparedStatement.executeQuery();
-
-                if (resultSet.next()) return resultSet.getString("COMMAND");
-            }
+            if (resultSet.next()) return resultSet.getString("COMMAND");
         } catch (SQLException exception) {
-            LoggerUtils.error("Error getting command: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
-
         return "";
     }
 
     @Override
     public String getName(@NotNull String vaultcher) {
         String query = "SELECT VAULTCHER FROM vaultcher WHERE VAULTCHER = ?";
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
+            preparedStatement.setString(1, vaultcher);
+            ResultSet resultSet = preparedStatement.executeQuery();
 
-        try {
-            try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
-                preparedStatement.setString(1, vaultcher);
-
-                ResultSet resultSet = preparedStatement.executeQuery();
-
-                if (resultSet.next()) return resultSet.getString("VAULTCHER");
-            }
+            if (resultSet.next()) return resultSet.getString("VAULTCHER");
         } catch (SQLException exception) {
-            LoggerUtils.error("Error getting vaultcher name: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
-
         return "";
     }
 
@@ -459,17 +402,16 @@ public class SQLite extends AbstractDatabase {
         try (PreparedStatement selectStatement = getConnection().prepareStatement(query)) {
             selectStatement.setString(1, vaultcher);
             ResultSet resultSet = selectStatement.executeQuery();
+
             if (resultSet.next()) {
-                List<String> ownerList = new ArrayList<>(Arrays
+                List<String> ownerList = Arrays
                         .stream(resultSet.getString("OWNERS").split(","))
                         .map(String::trim)
-                        .toList());
+                        .collect(Collectors.toList());
 
                 int index = ownerList.indexOf(oldOwner);
-
                 if (index != -1) {
                     ownerList.set(index, newOwner);
-
                     try (PreparedStatement updateStatement = getConnection().prepareStatement(updateQuery)) {
                         updateStatement.setString(1, String.join(", ", ownerList));
                         updateStatement.setString(2, vaultcher);
@@ -478,89 +420,73 @@ public class SQLite extends AbstractDatabase {
                 }
             }
         } catch (SQLException exception) {
-            LoggerUtils.error("Error transferring ownership: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
     }
 
     @Override
     public void deleteVaultcher(@NotNull String vaultcher) {
         String deleteQuery = "DELETE FROM vaultcher WHERE VAULTCHER = ?";
-
-        try {
-            try (PreparedStatement deleteStatement = getConnection().prepareStatement(deleteQuery)) {
-                deleteStatement.setString(1, vaultcher);
-                deleteStatement.executeUpdate();
-            }
+        try (PreparedStatement deleteStatement = getConnection().prepareStatement(deleteQuery)) {
+            deleteStatement.setString(1, vaultcher);
+            deleteStatement.executeUpdate();
         } catch (SQLException exception) {
-            LoggerUtils.error("Error deleting vaultcher: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
     }
 
     @Override
     public void changeName(@NotNull String oldName, @NotNull String newName) {
         String updateQuery = "UPDATE vaultcher SET VAULTCHER = ? WHERE VAULTCHER = ?";
-
-        try {
-            try (PreparedStatement updateStatement = getConnection().prepareStatement(updateQuery)) {
-                updateStatement.setString(1, newName);
-                updateStatement.setString(2, oldName);
-                updateStatement.executeUpdate();
-            }
+        try (PreparedStatement updateStatement = getConnection().prepareStatement(updateQuery)) {
+            updateStatement.setString(1, newName);
+            updateStatement.setString(2, oldName);
+            updateStatement.executeUpdate();
         } catch (SQLException exception) {
-            LoggerUtils.error("Error changing vaultcher name: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
     }
 
     @Override
     public void changeCommand(@NotNull String name, @NotNull String newCommand) {
         String updateQuery = "UPDATE vaultcher SET COMMAND = ? WHERE VAULTCHER = ?";
-
-        try {
-            try (PreparedStatement updateStatement = getConnection().prepareStatement(updateQuery)) {
-                updateStatement.setString(1, newCommand);
-                updateStatement.setString(2, name);
-                updateStatement.executeUpdate();
-            }
+        try (PreparedStatement updateStatement = getConnection().prepareStatement(updateQuery)) {
+            updateStatement.setString(1, newCommand);
+            updateStatement.setString(2, name);
+            updateStatement.executeUpdate();
         } catch (SQLException exception) {
-            LoggerUtils.error("Error changing command: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
     }
 
     @Override
     public void changeUses(@NotNull String name, int newUses) {
         String updateQuery = "UPDATE vaultcher SET USES = ? WHERE VAULTCHER = ?";
-
-        try {
-            try (PreparedStatement updateStatement = getConnection().prepareStatement(updateQuery)) {
-                updateStatement.setInt(1, newUses);
-                updateStatement.setString(2, name);
-                updateStatement.executeUpdate();
-            }
+        try (PreparedStatement updateStatement = getConnection().prepareStatement(updateQuery)) {
+            updateStatement.setInt(1, newUses);
+            updateStatement.setString(2, name);
+            updateStatement.executeUpdate();
         } catch (SQLException exception) {
-            LoggerUtils.error("Error changing uses: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
     }
 
     @Override
     public List<VaultcherData> getVaultchers(@NotNull OfflinePlayer player) {
         List<VaultcherData> vaultchers = new ArrayList<>();
-
         String query = "SELECT * FROM vaultcher WHERE USES >= 1 AND OWNERS LIKE ?";
 
-        try (PreparedStatement preparedStatement = connection.prepareStatement(query)) {
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
             preparedStatement.setString(1, "%" + player.getName() + "%");
-
             ResultSet resultSet = preparedStatement.executeQuery();
-
             while (resultSet.next()) {
                 String name = resultSet.getString("VAULTCHER");
                 String command = resultSet.getString("COMMAND");
                 int uses = resultSet.getInt("USES");
-
                 vaultchers.add(new VaultcherData(name, command, uses));
             }
         } catch (SQLException exception) {
-            LoggerUtils.error("Error getting vaultchers: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
 
         return vaultchers;
@@ -571,18 +497,16 @@ public class SQLite extends AbstractDatabase {
         List<VaultcherData> vaultchers = new ArrayList<>();
         String query = ConfigKeys.USES_MUST_BE_BIGGER_THAN_ONE.getBoolean() ? "SELECT * FROM vaultcher WHERE USES >= 1" : "SELECT * FROM vaultcher";
 
-        try (PreparedStatement preparedStatement = connection.prepareStatement(query)) {
+        try (PreparedStatement preparedStatement = getConnection().prepareStatement(query)) {
             ResultSet resultSet = preparedStatement.executeQuery();
-
             while (resultSet.next()) {
                 String name = resultSet.getString("VAULTCHER");
                 String command = resultSet.getString("COMMAND");
                 int uses = resultSet.getInt("USES");
-
                 vaultchers.add(new VaultcherData(name, command, uses));
             }
         } catch (SQLException exception) {
-            LoggerUtils.error("Error getting every vaultcher: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
 
         return vaultchers;
@@ -592,9 +516,9 @@ public class SQLite extends AbstractDatabase {
     public void reconnect() {
         try {
             if (getConnection() != null && !getConnection().isClosed()) getConnection().close();
-            new SQLite();
+            new H2();
         } catch (SQLException | ClassNotFoundException exception) {
-            LoggerUtils.error("Error reconnecting: " + exception.getMessage());
+            LoggerUtils.error(exception.getMessage());
         }
     }
 }
